DigicielFull/force-app/main/default/objects/gnx__Document_template__c/gnx__Document_template__c.object-meta.xml
<CustomObject>
    <label>Document template</label>
    <nameField>
        <label>Document template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document templates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>