DigicielFull/force-app/main/default/objects/gnx__Document_template__c/fields/gnx__Activate_sign_order__c.field-meta.xml
<CustomField>
    <fullName>gnx__Activate_sign_order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activate sign order</label>
    <type>Checkbox</type>
</CustomField>