DigicielFull/force-app/main/default/objects/gnx__Document_template__c/fields/gnx__Allow_recipients_modification__c.field-meta.xml
<CustomField>
    <fullName>gnx__Allow_recipients_modification__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Allow recipients modification</label>
    <type>Checkbox</type>
</CustomField>