DigicielFull/force-app/main/default/objects/gnx__Document_template__c/fields/gnx__Available_sending_methods__c.field-meta.xml
<CustomField>
    <fullName>gnx__Available_sending_methods__c</fullName>
    <label>Available sending methods</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Certified Sign</fullName>
                <default>true</default>
                <label>Certified Sign</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>