DigicielFull/force-app/main/default/objects/gnx__Document_template__c/fields/gnx__date_of_last_send__c.field-meta.xml
<CustomField>
    <fullName>gnx__date_of_last_send__c</fullName>
    <label>Date of last send</label>
    <type>DateTime</type>
</CustomField>