DigicielFull/force-app/main/default/objects/gnx__Document_template__c/fields/gnx__Default_procedure_name__c.field-meta.xml
<CustomField>
    <fullName>gnx__Default_procedure_name__c</fullName>
    <label>Default procedure name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>