DigicielFull/force-app/main/default/objects/gnx__Document_template__c/fields/gnx__Generated_file_name_prefix__c.field-meta.xml
<CustomField>
    <fullName>gnx__Generated_file_name_prefix__c</fullName>
    <label>Generated file name prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>