DigicielFull/force-app/main/default/objects/gnx__Document_template__c/fields/gnx__Language__c.field-meta.xml
<CustomField>
    <fullName>gnx__Language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>zh_CN</fullName>
                <label>Chinese (Simplified)</label>
            </value>
            <value>
                <fullName>zh_TW</fullName>
                <label>Chinese (Traditional)</label>
            </value>
            <value>
                <fullName>da</fullName>
                <label>Danish</label>
            </value>
            <value>
                <fullName>nl_NL</fullName>
                <label>Dutch</label>
            </value>
            <value>
                <fullName>en_US</fullName>
                <label>English</label>
            </value>
            <value>
                <fullName>fi</fullName>
                <label>Finnish</label>
            </value>
            <value>
                <fullName>fr</fullName>
                <label>French</label>
            </value>
            <value>
                <fullName>de</fullName>
                <label>German</label>
            </value>
            <value>
                <fullName>it</fullName>
                <label>Italian</label>
            </value>
            <value>
                <fullName>ja</fullName>
                <label>Japanese</label>
            </value>
            <value>
                <fullName>ko</fullName>
                <label>Korean</label>
            </value>
            <value>
                <fullName>no</fullName>
                <label>Norwegian</label>
            </value>
            <value>
                <fullName>pt_BR</fullName>
                <label>Portuguese (Brazil)</label>
            </value>
            <value>
                <fullName>ru</fullName>
                <label>Russian</label>
            </value>
            <value>
                <fullName>es</fullName>
                <label>Spanish</label>
            </value>
            <value>
                <fullName>es_MX</fullName>
                <label>Spanish (Mexico)</label>
            </value>
            <value>
                <fullName>sv</fullName>
                <label>Swedish</label>
            </value>
            <value>
                <fullName>th</fullName>
                <label>Thai</label>
            </value>
            <value>
                <fullName>ar</fullName>
                <label>Arabic</label>
            </value>
            <value>
                <fullName>bg</fullName>
                <label>Bulgarian</label>
            </value>
            <value>
                <fullName>hr</fullName>
                <label>Croatian</label>
            </value>
            <value>
                <fullName>cs</fullName>
                <label>Czech</label>
            </value>
            <value>
                <fullName>en_GB</fullName>
                <label>English (UK)</label>
            </value>
            <value>
                <fullName>el</fullName>
                <label>Greek</label>
            </value>
            <value>
                <fullName>iw</fullName>
                <label>Hebrew</label>
            </value>
            <value>
                <fullName>hu</fullName>
                <label>Hungarian</label>
            </value>
            <value>
                <fullName>in</fullName>
                <label>Indonesian</label>
            </value>
            <value>
                <fullName>pl</fullName>
                <label>Polish</label>
            </value>
            <value>
                <fullName>pt_PT</fullName>
                <label>Portuguese (European)</label>
            </value>
            <value>
                <fullName>ro</fullName>
                <label>Romanian</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>