DigicielFull/force-app/main/default/objects/gnx__Document_template__c/fields/gnx__Language_field_on_main_object__c.field-meta.xml
<CustomField>
    <fullName>gnx__Language_field_on_main_object__c</fullName>
    <inlineHelpText>Nom API du champ langue qui sera requêté pour déterminer la langue par défaut affichée sur le composant de génération, si ce champ est vide la langue par défaut sera celle de l&apos;utilisateur</inlineHelpText>
    <label>Language field on main object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>