DigicielFull/force-app/main/default/objects/gnx__Document_template__c/fields/gnx__Last_version_number_sent__c.field-meta.xml
<CustomField>
    <fullName>gnx__Last_version_number_sent__c</fullName>
    <label>Last version number sent</label>
    <length>50</length>
    <type>Text</type>
</CustomField>