DigicielFull/force-app/main/default/objects/gnx__Document_template__c/fields/gnx__Main_object_condition__c.field-meta.xml
<CustomField>
    <fullName>gnx__Main_object_condition__c</fullName>
    <description>Additional condition that will be run on main object, if context record match this condition, this template will be available in the document generation component</description>
    <label>Main object condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>