DigicielFull/force-app/main/default/objects/gnx__Document_template__c/fields/gnx__MFA_method__c.field-meta.xml
<CustomField>
    <fullName>gnx__MFA_method__c</fullName>
    <inlineHelpText>Uniquement valable pour de la signature certifiée.</inlineHelpText>
    <label>MFA method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>SMS by default</fullName>
                <default>true</default>
                <label>SMS by default</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>