DigicielFull/force-app/main/default/objects/gnx__Document_template__c/fields/gnx__Number_of_document_template_main_object__c.field-meta.xml
<CustomField>
    <fullName>gnx__Number_of_document_template_main_object__c</fullName>
    <label>Number of document template main object</label>
    <summaryFilterItems>
        <field>gnx__Document_template_object__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Main</value>
    </summaryFilterItems>
    <summaryForeignKey>gnx__Document_template_object__c.gnx__Document_template__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>