DigicielFull/force-app/main/default/objects/gnx__Document_template__c/fields/gnx__Order__c.field-meta.xml
<CustomField>
    <fullName>gnx__Order__c</fullName>
    <description>Displayed order of document template in document generation component</description>
    <label>Order</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>