DigicielFull/force-app/main/default/objects/gnx__Document_template__c/fields/gnx__Override_salesforce_file_sharing__c.field-meta.xml
<CustomField>
    <fullName>gnx__Override_salesforce_file_sharing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, if the versioning policy is set to erase and replace, even if the user don&apos;t have right to delete content document, it will be done to force the replacement of the document</description>
    <inlineHelpText>Si vous cochez cette case et que vous êtes en politique de version Supprimer et remplacer le fichier, le document anciennement présent sera remplacé même si l&apos;utilisateur faisant une nouvelle génération n&apos;a pas le droit de suppression</inlineHelpText>
    <label>Override Salesforce file sharing</label>
    <type>Checkbox</type>
</CustomField>