DigicielFull/force-app/main/default/objects/gnx__Document_template__c/fields/gnx__Path_on_remote_storage__c.field-meta.xml
<CustomField>
    <fullName>gnx__Path_on_remote_storage__c</fullName>
    <label>Path on remote storage</label>
    <type>TextArea</type>
</CustomField>