DigicielFull/force-app/main/default/objects/gnx__Document_template__c/fields/gnx__pdf_output__c.field-meta.xml
<CustomField>
    <fullName>gnx__pdf_output__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Autorise la génration d&apos;un document au format PDF</inlineHelpText>
    <label>PDF</label>
    <type>Checkbox</type>
</CustomField>