DigicielFull/force-app/main/default/objects/gnx__Document_template__c/fields/gnx__Phone_field_API_name__c.field-meta.xml
<CustomField>
    <fullName>gnx__Phone_field_API_name__c</fullName>
    <label>Phone field API name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>