DigicielFull/force-app/main/default/objects/gnx__Document_template__c/fields/gnx__pptx_output__c.field-meta.xml
<CustomField>
    <fullName>gnx__pptx_output__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Autorise la génration d&apos;un document au format PPTX</inlineHelpText>
    <label>PPTX</label>
    <type>Checkbox</type>
</CustomField>