DigicielFull/force-app/main/default/objects/gnx__Document_template__c/fields/gnx__Recipients_configuration__c.field-meta.xml
<CustomField>
    <fullName>gnx__Recipients_configuration__c</fullName>
    <description>Field which contains all the template&apos;s recipients configuration i.e. Type, Order, default contact field on the main record, filter on the contact and recipients filter</description>
    <label>Recipients configuration</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>