DigicielFull/force-app/main/default/objects/gnx__Document_template__c/fields/gnx__Salesforce_content_version_id_sent__c.field-meta.xml
<CustomField>
    <fullName>gnx__Salesforce_content_version_id_sent__c</fullName>
    <label>Salesforce content version id sent</label>
    <length>20</length>
    <type>Text</type>
</CustomField>