DigicielFull/force-app/main/default/objects/gnx__Document_template__c/fields/gnx__Save_json_data_in_log__c.field-meta.xml
<CustomField>
    <fullName>gnx__Save_json_data_in_log__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Save json data in log</label>
    <type>Checkbox</type>
</CustomField>