DigicielFull/force-app/main/default/objects/gnx__Document_template__c/fields/gnx__Template_ID_on_Azure__c.field-meta.xml
<CustomField>
    <fullName>gnx__Template_ID_on_Azure__c</fullName>
    <label>Template ID sur Azure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>