DigicielFull/force-app/main/default/objects/gnx__Document_template__c/fields/gnx__Template_signature__c.field-meta.xml
<CustomField>
    <fullName>gnx__Template_signature__c</fullName>
    <label>Template checksum</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>