DigicielFull/force-app/main/default/objects/gnx__Document_template__c/fields/gnx__Translation_of__c.field-meta.xml
<CustomField>
    <fullName>gnx__Translation_of__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Translation of</label>
    <referenceTo>gnx__Document_template__c</referenceTo>
    <relationshipLabel>Translations</relationshipLabel>
    <relationshipName>Translations</relationshipName>
    <type>Lookup</type>
</CustomField>