DigicielFull/force-app/main/default/objects/gnx__Document_template__c/fields/gnx__User_can_change_language__c.field-meta.xml
<CustomField>
    <fullName>gnx__User_can_change_language__c</fullName>
    <defaultValue>false</defaultValue>
    <label>User can change language</label>
    <type>Checkbox</type>
</CustomField>