DigicielFull/force-app/main/default/objects/gnx__Document_template__c/fields/gnx__Validity_period__c.field-meta.xml
<CustomField>
    <fullName>gnx__Validity_period__c</fullName>
    <label>Validity period</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>