DigicielFull/force-app/main/default/objects/gnx__Document_template__c/fields/gnx__Verify_template_signature__c.field-meta.xml
<CustomField>
    <fullName>gnx__Verify_template_signature__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Calcul la signature numérique (checksum) du modèle lors de l&apos;envoie du template et vérifie cette signature lors de la génération</inlineHelpText>
    <label>Verify template checksum</label>
    <type>Checkbox</type>
</CustomField>