DigicielFull/force-app/main/default/objects/gnx__Document_template__c/fields/gnx__Versioning_policy__c.field-meta.xml
<CustomField>
    <fullName>gnx__Versioning_policy__c</fullName>
    <label>Versioning policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>replace</fullName>
                <label>Erase and replace</label>
            </value>
            <value>
                <fullName>version</fullName>
                <label>Create new version</label>
            </value>
            <value>
                <fullName>file</fullName>
                <default>true</default>
                <label>Create new file</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>