DigicielFull/force-app/main/default/objects/gnx__Document_template__c/fields/gnx__View_document__c.field-meta.xml
<CustomField>
    <fullName>gnx__View_document__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+gnx__Salesforce_content_document_Id__c,&apos;document&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View document</label>
    <type>Text</type>
</CustomField>