DigicielFull/force-app/main/default/objects/gnx__Document_template__c/fields/gnx__Word_labels__c.field-meta.xml
<CustomField>
    <fullName>gnx__Word_labels__c</fullName>
    <label>Word labels</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>