DigicielFull/force-app/main/default/objects/gnx__Document_template__c/fields/gnx__Wrong_object_or_wrong_format__c.field-meta.xml
<CustomField>
    <fullName>gnx__Wrong_object_or_wrong_format__c</fullName>
    <label>Wrong object or wrong format</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>