DigicielFull/force-app/main/default/objects/gnx__Document_template__c/recordTypes/gnx__Associate.recordType-meta.xml
<RecordType>
    <fullName>gnx__Associate</fullName>
    <active>true</active>
    <description>used for associate document template</description>
    <label>Associate</label>
</RecordType>