DigicielFull/force-app/main/default/objects/gnx__Document_template__c/recordTypes/gnx__Main.recordType-meta.xml
<RecordType>
    <fullName>gnx__Main</fullName>
    <active>true</active>
    <description>used for main document template pack</description>
    <label>Main</label>
</RecordType>